Refactor, Restructure and new examples, preparing for release v2.0.r3